# fast-ordset

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
benchmarks/: conftest.py  test_memory.py  test_performance.py
docs/: benchmarks.md  development.md  scripts.md
pysrc/fast_ordset/: __init__.py  __init__.pyi
scripts/: benchmark_mem.sh  benchmark_time.sh  build.sh  common_env.sh  debug.sh  lint.sh  test.sh
src/: hash.rs  lib.rs  ordered_set.rs
tests/: conftest.py  test_construct_and_containment.py  test_copy.py  test_difference.py  test_equality.py  test_errors_and_edge_cases.py  test_intersection.py  test_item_access.py  test_iteration.py  test_mutators.py  test_ordered_set.py  test_repr_str.py  test_symmetric_difference.py  test_to_list.py  test_union.py
