[project]
name = "fast-ordset"
version = "0.4.0"
description = "Ordered set for Python implemented in Rust"
requires-python = ">=3.9,<3.15"
license = "MIT"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.optional-dependencies]
dev = [
    "maturin>=1.12.6",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark[histogram]>=4.0",
    "ordered-set>=4.1.0",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
# Unit tests only; run benchmarks explicitly: pytest benchmarks/ --benchmark-only
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["pysrc"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "def __str__"]

[tool.maturin]
module-name = "fast_ordset"
python-source = "pysrc"
include = [
    { format = "sdist", path = ".cargo/*" },
    { format = "sdist", path = "Cargo.lock" },
]
